--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-lk-theme="visio-light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/play-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visio</title>
   </head>
